docs: Add swagger description for remove scopes endpoint
